add the token for all api's and add the company apis
